// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for theme: false 1`] = `
":host {
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-select-option-padding-left: 24px;
  --p-internal-multi-select-option-padding-left: 24px;
}
.optgroup {
  display: flex;
  flex-direction: column;
  gap: 8px;
}
.label {
  color: #010205;
  display: block;
  padding: 3px 14px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}"
`;

exports[`getComponentCss() should return correct css for theme: false 2`] = `
":host {
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-select-option-padding-left: 24px;
  --p-internal-multi-select-option-padding-left: 24px;
}
.optgroup {
  display: flex;
  flex-direction: column;
  gap: 8px;
}
.label {
  color: #FBFCFF;
  display: block;
  padding: 3px 14px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}"
`;

exports[`getComponentCss() should return correct css for theme: true 1`] = `
":host {
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-select-option-padding-left: 24px;
  --p-internal-multi-select-option-padding-left: 24px;
}
.optgroup {
  display: flex;
  flex-direction: column;
  gap: 8px;
}
.label {
  color: #949598;
  display: block;
  padding: 3px 14px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}"
`;

exports[`getComponentCss() should return correct css for theme: true 2`] = `
":host {
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-select-option-padding-left: 24px;
  --p-internal-multi-select-option-padding-left: 24px;
}
.optgroup {
  display: flex;
  flex-direction: column;
  gap: 8px;
}
.label {
  color: #7E7F82;
  display: block;
  padding: 3px 14px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}"
`;
